# Pointpillar_tensorrt

./: CMakeLists.txt  README.md  bootstrap.yaml  demo.cc  gen_anchor.cc  params.h
cfgs/: hv_pointpillars_secfpn_waymo.yaml
cmake/: FindTensorRT.cmake
data/bbox/: 2023-08-29-16-50-12-517.txt  2023-08-29-16-50-12-601.txt  2023-08-29-16-50-12-684.txt  2023-08-29-16-50-12-766.txt  2023-08-29-16-50-12-851.txt  2023-08-29-16-50-12-933.txt  2023-08-29-16-50-13-015.txt  2023-08-29-16-50-13-100.txt  2023-08-29-16-50-13-182.txt  2023-08-29-16-50-13-265.txt  2023-08-29-16-50-13-350.txt  2023-08-29-16-50-13-435.txt  2023-08-29-16-50-13-518.txt  2023-08-29-16-50-13-601.txt  2023-08-29-16-50-13-682.txt
model/: vfe_dim4ep35.onnx  vfe_dim4ep35.onnx.cache
src/: anchor_mask_cuda.cu  anchor_mask_cuda.h  nms_cuda.cu  nms_cuda.h  pointpillars.cc  pointpillars.h  postprocess_.cu  postprocess_.h  preprocess.cu  preprocess.h
tools/: generagte_anchor.py  trans_backbonev.py  trans_vfe.py
tools/pcd_bbox_display/: open3d_vis.py  read_apollo.py  utils_kitti.py
tools/waymo/: txt2npy.py
tools/waymod_v2/: txt2npy.py
